package umu.tds.model;

public class Contacto {
	
	// Atributos
	private String nombre;
}
