package umu.tds.model;

public abstract class Descuento {

}
