package umu.tds.model;

public class Grupo extends Contacto{

}
