@startuml
skinparam defaultFontName Helvetica

interface Descuento {
    + aplicarDescuento()
}

Descuento <|.. D1
Descuento <|.. D2

hide D1 attributes
hide D1 methods

hide D2 attributes
hide D2 methods

class AppChat {
    +login()
}

hide AppChat attributes
note top of AppChat : Controlador
AppChat -left->  Descuento

class CatalogoUsuarios {
    +getUsuario()
    +addUsuario()
}

hide CatalogoUsuarios attributes
AppChat *-- "1" CatalogoUsuarios

class Usuario {
    - nombre: String
    - email: String
    - telefono: String
    - premium: Boolean
}

CatalogoUsuarios *-- "0..*" Usuario

class Contacto {
    - nombre: String
    - telefono : String
}

Usuario *-right- Contacto

class Grupo {
    - nombre: String
    - miembros: Set<Contacto>
    - agregarContacto()
}

class Mensaje {
    - texto: String
    - emisor: String
    - receptor: String
    - fechaHora: Date
}

Usuario -right- Mensaje

Grupo -right- Mensaje

Usuario -down- Grupo

interface Filtro {
    + aplicarDescuento()
}

Filtro  <|.. FiltroTexto
Filtro  <|.left. FiltroContacto
Filtro  <|.. FiltroTelefono

hide FiltroTexto attributes
hide FiltroTexto methods

hide FiltroContacto attributes
hide FiltroContacto methods

hide FiltroTelefono attributes
hide FiltroTelefono methods

Usuario -left->  Filtro


@enduml
